--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1621,3 +1621,62 @@
 "contact_phase2_result_delete_all_contacts_nav_bar_title" = "امسح جهات الاتصال";
 "eula_title" = "اتفاقية المستخدم";
 "photo_video_empty_no_unsync_photos_title" = "جميع المستندات تم نسخها احتياطيا";
+"photo_edit_navbar_save" = "حفظ";
+"photo_edit_save_as_copy" = "حفظ نسخة";
+"photo_edit_reset_to_original" = "راجع عن التعديلات";
+"photo_edit_close_alert_title" = "هل تريد التراجع عن التعديلات؟";
+"photo_edit_close_alert_message" = "سيتم إلغاء التعديلات في الصورة.";
+"photo_edit_close_alert_left_button" = "واصل التعديل";
+"photo_edit_close_alert_right_button" = "إلغاء";
+"photo_edit_modify_alert_title" = "هل تريد تغيير هذه الصورة؟";
+"photo_edit_modify_alert_message" = "سيتم تغيير الصورة في معرض هاتفك ولايف بوكس.";
+"photo_edit_modify_alert_left_button" = "تخلي عنه";
+"photo_edit_modify_alert_right_button" = "حفظ";
+"photo_edit_save_as_copy_alert_title" = "هل تريد الحفظ كنسخة؟";
+"photo_edit_save_as_copy_alert_message" = "تم تحرير الصورة في معرض الهاتف وصندوق النجاة.";
+"photo_edit_save_as_copy_alert_left_button" = "الغاء التحميل";
+"photo_edit_save_as_copy_alert_right_button" = "حفظ نسخة";
+"photo_edit_modify_success_snackbar_message" = "تم تعديل الصورة في معرض هاتفك ولايف بوكس.";
+"photo_edit_save_as_copy_success_snackbar_message" = "تم حفظ الصورة بنجاح مع النسخة المعدلة.";
+"photo_edit_save_image_error_message" = "تعذر حفظ الملف.";
+"photo_edit_filter_original" = "أصلي";
+"photo_edit_filter_clarendon" = "فيلتره 2";
+"photo_edit_filter_metropolis" = "فيلتره 15";
+"photo_edit_filter_lime" = "فيلتره 10";
+"photo_edit_filter_adele" = "فيلتره 13";
+"photo_edit_filter_amazon" = "فيلتره 7";
+"photo_edit_filter_april" = "فيلتره 6";
+"photo_edit_filter_audrey" = "فيلتره 16";
+"photo_edit_filter_aweStruck" = "فيلتره 1";
+"photo_edit_filter_bluemess" = "فيلتره 12";
+"photo_edit_filter_cruz" = "فيلتره 14";
+"photo_edit_filter_haan" = "فيلتره 11";
+"photo_edit_filter_mars" = "فيلتره 4";
+"photo_edit_filter_oldMan" = "فيلتره 3";
+"photo_edit_filter_rise" = "فيلتره 5";
+"photo_edit_filter_starlit" = "فيلتره 8";
+"photo_edit_filter_whisper" = "فيلتره 9";
+"photo_edit_adjust" = "تعديل";
+"photo_edit_light" = "ضوء";
+"photo_edit_color" = "لون";
+"photo_edit_effect" = "تأثير";
+"photo_edit_hsl" = "خليط";
+"photo_edit_adjustment_brightness" = "سطوع";
+"photo_edit_adjustment_contrast" = "تباين";
+"photo_edit_adjustment_exposure" = "تعرض";
+"photo_edit_adjustment_highlights" = "مناطق مشرقة";
+"photo_edit_adjustment_shadows" = "ظلال";
+"photo_edit_adjustment_temperature" = "حرارة";
+"photo_edit_adjustment_tint" = "تدرج";
+"photo_edit_adjustment_saturation" = "تشبع";
+"photo_edit_adjustment_gamma" = "جاما";
+"photo_edit_adjustment_hue" = "درجة";
+"photo_edit_adjustment_intensity" = "كثافة";
+"photo_edit_adjustment_angle" = "زاوية";
+"photo_edit_adjustment_sharpness" = "حدة";
+"photo_edit_adjustment_blur" = "طمس";
+"photo_edit_adjustment_vignette" = "لافينييت";
+"photo_edit_tabbar_filters" = "ترشيح";
+"photo_edit_tabbar_adjustments" = "تعديل";
+"photo_edit_ratio_free" = "حرّ";
+"photo_edit_ratio_original" = "أصلي";
