--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1639,8 +1639,8 @@
 "gallery_filter_synced" = "Elementos respaldados";
 "gallery_filter_unsynced" = "Elementos que no se han respaldado";
 "gallery_filter_action_sheet_all" = "Todos";
-"gallery_filter_action_sheet_synced" = "Elementos respaldados";
-"gallery_filter_action_sheet_unsynced" = "Elementos que no se han respaldado";
+"gallery_filter_action_sheet_synced" = "Sincronizado";
+"gallery_filter_action_sheet_unsynced" = "No Sincronizado";
 "contact_phase2_error_quota_restore" = "No puede continuar el proceso porque no hay espacio en el área de almacenamiento. Puede aumentar su capacidad de almacenamiento o puede crear espacio libre eliminando los archivos existentes en su almacenamiento.";
 "contact_phase2_error_quota_backup" = "No puede continuar el proceso porque no hay espacio en el área de almacenamiento. Puede aumentar su capacidad de almacenamiento o puede crear espacio libre eliminando los archivos existentes en su almacenamiento.";
 "contact_phase2_error_message" = "Ha ocurrido un error temporal. Inténtalo de nuevo.";
@@ -1651,3 +1651,62 @@
 "contact_phase2_result_delete_all_contacts_nav_bar_title" = "Eliminar Contactos";
 "eula_title" = "Acuerdo del Usuario";
 "photo_video_empty_no_unsync_photos_title" = "Todos los archivos están respaldados.";
+"photo_edit_navbar_save" = "Guardar";
+"photo_edit_save_as_copy" = "Guardar Copia";
+"photo_edit_reset_to_original" = "Deshacer ediciones";
+"photo_edit_close_alert_title" = "¿Quiere renunciar a las ediciones?";
+"photo_edit_close_alert_message" = "Se cancelarán las ediciones en la foto.";
+"photo_edit_close_alert_left_button" = "Continua editando";
+"photo_edit_close_alert_right_button" = "Cancelar";
+"photo_edit_modify_alert_title" = "¿Quieres editar la foto?";
+"photo_edit_modify_alert_message" = "La foto se editará en la galería del teléfono y en el lifebox.";
+"photo_edit_modify_alert_left_button" = "Rendirse";
+"photo_edit_modify_alert_right_button" = "Guardar";
+"photo_edit_save_as_copy_alert_title" = "¿Quieres guardarlo como copia?";
+"photo_edit_save_as_copy_alert_message" = "La foto se guardará en la galería del teléfono y en la caja de vida como una nueva foto.";
+"photo_edit_save_as_copy_alert_left_button" = "Rendirse";
+"photo_edit_save_as_copy_alert_right_button" = "Guardar copia";
+"photo_edit_modify_success_snackbar_message" = "La foto fue editada en la galería del teléfono y en el salvavidas.";
+"photo_edit_save_as_copy_success_snackbar_message" = "La foto se ha guardado correctamente con la versión editada.";
+"photo_edit_save_image_error_message" = "No se pudo guardar el archivo.";
+"photo_edit_filter_original" = "Original";
+"photo_edit_filter_clarendon" = "Filtro 2";
+"photo_edit_filter_metropolis" = "Filtro 15";
+"photo_edit_filter_lime" = "Filtro 10";
+"photo_edit_filter_adele" = "Filtro 13";
+"photo_edit_filter_amazon" = "Filtro 7";
+"photo_edit_filter_april" = "Filtro 6";
+"photo_edit_filter_audrey" = "Filtro 16";
+"photo_edit_filter_aweStruck" = "Filtro 1";
+"photo_edit_filter_bluemess" = "Filtro 12";
+"photo_edit_filter_cruz" = "Filtro 14";
+"photo_edit_filter_haan" = "Filtro 11";
+"photo_edit_filter_mars" = "Filtro 4";
+"photo_edit_filter_oldMan" = "Filtro 3";
+"photo_edit_filter_rise" = "Filtro 5";
+"photo_edit_filter_starlit" = "Filtro 8";
+"photo_edit_filter_whisper" = "Filtro 9";
+"photo_edit_adjust" = "Editar";
+"photo_edit_light" = "Ligero";
+"photo_edit_color" = "Color";
+"photo_edit_effect" = "Efecto";
+"photo_edit_hsl" = "Mezcla";
+"photo_edit_adjustment_brightness" = "Brillo";
+"photo_edit_adjustment_contrast" = "Contraste";
+"photo_edit_adjustment_exposure" = "Exposición";
+"photo_edit_adjustment_highlights" = "Áreas Brillantes";
+"photo_edit_adjustment_shadows" = "Oscuridad";
+"photo_edit_adjustment_temperature" = "Temperatura";
+"photo_edit_adjustment_tint" = "Viraje";
+"photo_edit_adjustment_saturation" = "Saturación";
+"photo_edit_adjustment_gamma" = "Gama";
+"photo_edit_adjustment_hue" = "Sombra";
+"photo_edit_adjustment_intensity" = "Densidad";
+"photo_edit_adjustment_angle" = "Ángulo";
+"photo_edit_adjustment_sharpness" = "Nitidez";
+"photo_edit_adjustment_blur" = "Difuminar";
+"photo_edit_adjustment_vignette" = "Viñeta";
+"photo_edit_tabbar_filters" = "Filtrar";
+"photo_edit_tabbar_adjustments" = "Editar";
+"photo_edit_ratio_free" = "Independiente";
+"photo_edit_ratio_original" = "Original";
