--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -1915,3 +1915,62 @@ Please check I have understood the intended command here*/
 "contact_phase2_result_delete_all_contacts_nav_bar_title" = "Supprimer les Contacts";
 "eula_title" = "Accord de l'utilisateur";
 "photo_video_empty_no_unsync_photos_title" = "Tous les fichiers sont sauvegardés.";
+"photo_edit_navbar_save" = "Enregistrer";
+"photo_edit_save_as_copy" = "Enregistrer la Copie";
+"photo_edit_reset_to_original" = "Annuler les modifications";
+"photo_edit_close_alert_title" = "Voulez-vous renoncer aux retouches?";
+"photo_edit_close_alert_message" = "Les retouches sur la photo seront annulées.";
+"photo_edit_close_alert_left_button" = "Continuer les retouches";
+"photo_edit_close_alert_right_button" = "Annuler";
+"photo_edit_modify_alert_title" = "Voulez-vous retoucher la photo?";
+"photo_edit_modify_alert_message" = "La photo sera retouchée dans la galerie du téléphone et dans la lifebox.";
+"photo_edit_modify_alert_left_button" = "Délaisser";
+"photo_edit_modify_alert_right_button" = "Enregistrer";
+"photo_edit_save_as_copy_alert_title" = "Voulez-vous l'enregistrer en tant que copie?";
+"photo_edit_save_as_copy_alert_message" = "La photo sera enregistrée dans la galerie du téléphone et dans la lifebox en tant que nouvelle photo.";
+"photo_edit_save_as_copy_alert_left_button" = "Délaisser";
+"photo_edit_save_as_copy_alert_right_button" = "Enregistrer la copie";
+"photo_edit_modify_success_snackbar_message" = "La photo a été retouchée dans la galerie du téléphone et dans la lifebox.";
+"photo_edit_save_as_copy_success_snackbar_message" = "La photo a été enregistrée avec succès avec la version retouchée.";
+"photo_edit_save_image_error_message" = "Le fichier n'a pas pu être enregistré.";
+"photo_edit_filter_original" = "Original";
+"photo_edit_filter_clarendon" = "Filtre 2";
+"photo_edit_filter_metropolis" = "Filtre 15";
+"photo_edit_filter_lime" = "Filtre 10";
+"photo_edit_filter_adele" = "Filtre 13";
+"photo_edit_filter_amazon" = "Filtre 7";
+"photo_edit_filter_april" = "Filtre 6";
+"photo_edit_filter_audrey" = "Filtre 16";
+"photo_edit_filter_aweStruck" = "Filtre 1";
+"photo_edit_filter_bluemess" = "Filtre 12";
+"photo_edit_filter_cruz" = "Filtre 14";
+"photo_edit_filter_haan" = "Filtre 11";
+"photo_edit_filter_mars" = "Filtre 4";
+"photo_edit_filter_oldMan" = "Filtre 3";
+"photo_edit_filter_rise" = "Filtre 5";
+"photo_edit_filter_starlit" = "Filtre 8";
+"photo_edit_filter_whisper" = "Filtre 9";
+"photo_edit_adjust" = "Retoucher";
+"photo_edit_light" = "Lumière";
+"photo_edit_color" = "Couleur";
+"photo_edit_effect" = "Effet";
+"photo_edit_hsl" = "Mélange";
+"photo_edit_adjustment_brightness" = "Luminosité";
+"photo_edit_adjustment_contrast" = "Contraste";
+"photo_edit_adjustment_exposure" = "Exposition";
+"photo_edit_adjustment_highlights" = "Zones Lumineuses";
+"photo_edit_adjustment_shadows" = "Ombres";
+"photo_edit_adjustment_temperature" = "Température";
+"photo_edit_adjustment_tint" = "Virage";
+"photo_edit_adjustment_saturation" = "Saturation";
+"photo_edit_adjustment_gamma" = "Gamma";
+"photo_edit_adjustment_hue" = "Tonne";
+"photo_edit_adjustment_intensity" = "Densité";
+"photo_edit_adjustment_angle" = "Angle";
+"photo_edit_adjustment_sharpness" = "Acuité";
+"photo_edit_adjustment_blur" = "Brouiller";
+"photo_edit_adjustment_vignette" = "Vignette";
+"photo_edit_tabbar_filters" = "Filtre";
+"photo_edit_tabbar_adjustments" = "Retoucher";
+"photo_edit_ratio_free" = "Indépendant";
+"photo_edit_ratio_original" = "Original";
