--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1623,3 +1623,62 @@
 "contact_phase2_result_delete_all_contacts_nav_bar_title" = "Удалить Контакты";
 "eula_title" = "Пользовательское Соглашение";
 "photo_video_empty_no_unsync_photos_title" = "Все ваши файлы имеют резервные копии.";
+"photo_edit_navbar_save" = "Сохранить";
+"photo_edit_save_as_copy" = "Сохранить Копию";
+"photo_edit_reset_to_original" = "Отменить изменения";
+"photo_edit_close_alert_title" = "Вы хотите отказаться от изменений?";
+"photo_edit_close_alert_message" = "Редактирование фотографии будет отменено.";
+"photo_edit_close_alert_left_button" = "Продолжить редактирование";
+"photo_edit_close_alert_right_button" = "Отмена";
+"photo_edit_modify_alert_title" = "Сменить фотографию?";
+"photo_edit_modify_alert_message" = "Фотография будет изменена в галерее телефона и в lifebox.";
+"photo_edit_modify_alert_left_button" = "Отменить";
+"photo_edit_modify_alert_right_button" = "Сохранить";
+"photo_edit_save_as_copy_alert_title" = "Вы хотите сохранить как копию?";
+"photo_edit_save_as_copy_alert_message" = "Фотография будет сохранена в галерее телефона и в lifebox как новая фотография.";
+"photo_edit_save_as_copy_alert_left_button" = "Отменить";
+"photo_edit_save_as_copy_alert_right_button" = "Сохранить копию";
+"photo_edit_modify_success_snackbar_message" = "Фотография была отредактирована в телефонной галерее и в lifebox.";
+"photo_edit_save_as_copy_success_snackbar_message" = "Фотография успешно сохранена в отредактированной версии.";
+"photo_edit_save_image_error_message" = "Не удалось сохранить файл.";
+"photo_edit_filter_original" = "Оригинал";
+"photo_edit_filter_clarendon" = "Фильтр 2";
+"photo_edit_filter_metropolis" = "Фильтр 12";
+"photo_edit_filter_lime" = "Фильтр 10";
+"photo_edit_filter_adele" = "Фильтр 13";
+"photo_edit_filter_amazon" = "Фильтр 7";
+"photo_edit_filter_april" = "Фильтр 6";
+"photo_edit_filter_audrey" = "Фильтр 16";
+"photo_edit_filter_aweStruck" = "Фильтр 1";
+"photo_edit_filter_bluemess" = "Фильтр 12";
+"photo_edit_filter_cruz" = "Фильтр 14";
+"photo_edit_filter_haan" = "Фильтр 11";
+"photo_edit_filter_mars" = "Фильтр 4";
+"photo_edit_filter_oldMan" = "Фильтр 3";
+"photo_edit_filter_rise" = "Фильтр 5";
+"photo_edit_filter_starlit" = "Фильтр 8";
+"photo_edit_filter_whisper" = "Фильтр 9";
+"photo_edit_adjust" = "Редактировать";
+"photo_edit_light" = "Свет";
+"photo_edit_color" = "Цвет";
+"photo_edit_effect" = "Эффект";
+"photo_edit_hsl" = "Смесь";
+"photo_edit_adjustment_brightness" = "Яркость";
+"photo_edit_adjustment_contrast" = "Контраст";
+"photo_edit_adjustment_exposure" = "Экспозиция";
+"photo_edit_adjustment_highlights" = "Яркие Участки";
+"photo_edit_adjustment_shadows" = "Тени";
+"photo_edit_adjustment_temperature" = "Теплота";
+"photo_edit_adjustment_tint" = "Регулировка Оттенка";
+"photo_edit_adjustment_saturation" = "Насыщенность";
+"photo_edit_adjustment_gamma" = "Гамма";
+"photo_edit_adjustment_hue" = "Оттенок";
+"photo_edit_adjustment_intensity" = "Красочность";
+"photo_edit_adjustment_angle" = "Градус";
+"photo_edit_adjustment_sharpness" = "Четкость";
+"photo_edit_adjustment_blur" = "Размытие";
+"photo_edit_adjustment_vignette" = "Виньетка";
+"photo_edit_tabbar_filters" = "Фильтровать";
+"photo_edit_tabbar_adjustments" = "Редактировать";
+"photo_edit_ratio_free" = "Произвольный";
+"photo_edit_ratio_original" = "Оригинал";
