--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1607,8 +1607,8 @@
 "gallery_filter_synced" = "Göster: Yedeklenmiş öğeler";
 "gallery_filter_unsynced" = "Göster: Yedeklenmemiş öğeler";
 "gallery_filter_action_sheet_all" = "Tümü";
-"gallery_filter_action_sheet_synced" = "Yedeklenmiş öğeler";
-"gallery_filter_action_sheet_unsynced" = "Yedeklenmemiş öğeler";
+"gallery_filter_action_sheet_synced" = "Yedeklenmiş";
+"gallery_filter_action_sheet_unsynced" = "Yedeklenmemiş";
 "contact_phase2_error_quota_restore" = "Saklama alanında yer kalmadığı için işleme devam edemiyorsun. Saklama alanını yükseltebilir veya dosyalarını silerek saklama alanında yer açabilirsin.";
 "contact_phase2_error_quota_backup" = "Saklama alanında yer kalmadığı için işleme devam edemiyorsun. Saklama alanını yükseltebilir veya dosyalarını silerek saklama alanında yer açabilirsin.";
 "contact_phase2_error_message" = "Geçici bir hata oluştu. Lütfen tekrar deneyin.";
@@ -1619,3 +1619,62 @@
 "contact_phase2_result_delete_all_contacts_nav_bar_title" = "Kişileri Sil";
 "eula_title" = "Kullanıcı Sözleşmesi";
 "photo_video_empty_no_unsync_photos_title" = "Tüm dosyaların yedekli.";
+"photo_edit_navbar_save" = "Kaydet";
+"photo_edit_save_as_copy" = "Kopyayı Kaydet";
+"photo_edit_reset_to_original" = "Düzenlemeleri geri al";
+"photo_edit_close_alert_title" = "Değişikliklerden vazgeçmek istiyor musun?";
+"photo_edit_close_alert_message" = "Fotoğraftaki düzenlemeler iptal edilecek.";
+"photo_edit_close_alert_left_button" = "Düzenlemeye devam et";
+"photo_edit_close_alert_right_button" = "İptal";
+"photo_edit_modify_alert_title" = "Fotoğraf değiştirilsin mi?";
+"photo_edit_modify_alert_message" = "Fotoğraf, telefon galerinde ve lifebox'ta değiştirilecek.";
+"photo_edit_modify_alert_left_button" = "Vazgeç";
+"photo_edit_modify_alert_right_button" = "Kaydet";
+"photo_edit_save_as_copy_alert_title" = "Kopya olarak kaydetmek ister misin?";
+"photo_edit_save_as_copy_alert_message" = "Fotoğraf, telefon galerine ve lifebox'a yeni bir fotoğraf olarak kaydedilecek.";
+"photo_edit_save_as_copy_alert_left_button" = "Vazgeç";
+"photo_edit_save_as_copy_alert_right_button" = "Kopyayı kaydet";
+"photo_edit_modify_success_snackbar_message" = "Fotoğraf, telefon galerinde ve lifebox'ta düzenlendi.";
+"photo_edit_save_as_copy_success_snackbar_message" = "Fotoğraf düzenlenmiş versiyonu ile başarıyla kaydedildi.";
+"photo_edit_save_image_error_message" = "Dosya kaydedilemedi.";
+"photo_edit_filter_original" = "Orijinal";
+"photo_edit_filter_clarendon" = "Filtre 2";
+"photo_edit_filter_metropolis" = "Filtre 15";
+"photo_edit_filter_lime" = "Filtre 10";
+"photo_edit_filter_adele" = "Filtre 13";
+"photo_edit_filter_amazon" = "Filtre 7";
+"photo_edit_filter_april" = "Filtre 6";
+"photo_edit_filter_audrey" = "Filtre 16";
+"photo_edit_filter_aweStruck" = "Filtre 1";
+"photo_edit_filter_bluemess" = "Filtre 12";
+"photo_edit_filter_cruz" = "Filtre 14";
+"photo_edit_filter_haan" = "Filtre 11";
+"photo_edit_filter_mars" = "Filtre 4";
+"photo_edit_filter_oldMan" = "Filtre 3";
+"photo_edit_filter_rise" = "Filtre 5";
+"photo_edit_filter_starlit" = "Filtre 8";
+"photo_edit_filter_whisper" = "Filtre 9";
+"photo_edit_adjust" = "Düzenle";
+"photo_edit_light" = "Işık";
+"photo_edit_color" = "Renk";
+"photo_edit_effect" = "Efekt";
+"photo_edit_hsl" = "Karışım";
+"photo_edit_adjustment_brightness" = "Parlaklık";
+"photo_edit_adjustment_contrast" = "Kontrast";
+"photo_edit_adjustment_exposure" = "Pozlama";
+"photo_edit_adjustment_highlights" = "Parlak Alanlar";
+"photo_edit_adjustment_shadows" = "Gölgeler";
+"photo_edit_adjustment_temperature" = "Sıcaklık";
+"photo_edit_adjustment_tint" = "Tonlama";
+"photo_edit_adjustment_saturation" = "Doygunluk";
+"photo_edit_adjustment_gamma" = "Gamma";
+"photo_edit_adjustment_hue" = "Ton";
+"photo_edit_adjustment_intensity" = "Yoğunluk";
+"photo_edit_adjustment_angle" = "Açı";
+"photo_edit_adjustment_sharpness" = "Keskinlik";
+"photo_edit_adjustment_blur" = "Bulanıklık";
+"photo_edit_adjustment_vignette" = "Vinyet";
+"photo_edit_tabbar_filters" = "Filtrele";
+"photo_edit_tabbar_adjustments" = "Düzenle";
+"photo_edit_ratio_free" = "Serbest";
+"photo_edit_ratio_original" = "Orijinal";
