--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1645,8 +1645,8 @@
 "gallery_filter_synced" = "Show: Only synced";
 "gallery_filter_unsynced" = "Show: Only unsynced";
 "gallery_filter_action_sheet_all" = "All";
-"gallery_filter_action_sheet_synced" = "Only synced";
-"gallery_filter_action_sheet_unsynced" = "Only unsynced";
+"gallery_filter_action_sheet_synced" = "Synced";
+"gallery_filter_action_sheet_unsynced" = "Unsynced";
 "contact_phase2_error_quota_restore" = "You cannot continue processing because your storage is full. You can expand storage or delete files and free up your lifebox storage.";
 "contact_phase2_error_quota_backup" = "You cannot continue processing because your storage is full. You can expand storage or delete files and free up your lifebox storage.";
 "contact_phase2_error_message" = "An unknown error was encountered. Please try again later.";
@@ -1657,57 +1657,46 @@
 "contact_phase2_result_delete_all_contacts_nav_bar_title" = "Delete Contacts";
 "eula_title" = "Terms of Use";
 "photo_video_empty_no_unsync_photos_title" = "All your files are synced!";
-
 "photo_edit_navbar_save" = "Save";
 "photo_edit_save_as_copy" = "Save as copy";
 "photo_edit_reset_to_original" = "Reset to original";
-
-"photo_edit_tabbar_filters" = "Filters";
-"photo_edit_tabbar_adjustments" = "Adjustments";
-
-"photo_edit_close_alert_title" = "Discart Changes?";
-"photo_edit_close_alert_message" = "Your image edits will be discarded.";
+"photo_edit_close_alert_title" = "Discard Changes?";
+"photo_edit_close_alert_message" = "Your photo edits will be discarded.";
 "photo_edit_close_alert_left_button" = "Keep editing";
 "photo_edit_close_alert_right_button" = "Discard";
-
 "photo_edit_modify_alert_title" = "Modify Photo?";
-"photo_edit_modify_alert_message" = "This photo will be modified on your phone and saved on Lifebox.";
+"photo_edit_modify_alert_message" = "This photo will be modified on your device gallery and lifebox.";
 "photo_edit_modify_alert_left_button" = "Cancel";
 "photo_edit_modify_alert_right_button" = "Save";
- 
 "photo_edit_save_as_copy_alert_title" = "Save as a copy?";
-"photo_edit_save_as_copy_alert_message" = "This photo will be saved as a copy on your phone and Lifebox.";
+"photo_edit_save_as_copy_alert_message" = "This photo will be saved as a new photo in your device gallery and lifebox.";
 "photo_edit_save_as_copy_alert_left_button" = "Cancel";
 "photo_edit_save_as_copy_alert_right_button" = "Save copy";
-
-"photo_edit_modify_success_snackbar_message" = "Photo is modified on your phone and saved on Lifebox.";
-"photo_edit_save_as_copy_success_snackbar_message" = "Photo is saved as on your Lifebox.";
-"photo_edit_save_image_error_message" = "Save image error";
-
+"photo_edit_modify_success_snackbar_message" = "Photo is modified on your device gallery and lifebox.";
+"photo_edit_save_as_copy_success_snackbar_message" = "The photo is successfully saved as a modified version.";
+"photo_edit_save_image_error_message" = "The photo couldn't be saved.";
 "photo_edit_filter_original" = "Original";
-"photo_edit_filter_clarendon" = "Clarendon";
-"photo_edit_filter_metropolis" = "Metropolis";
-"photo_edit_filter_lime" = "Lime";
-"photo_edit_filter_adele" = "Adele";
-"photo_edit_filter_amazon" = "Amazon";
-"photo_edit_filter_april" = "April";
-"photo_edit_filter_audrey" = "Audrey";
-"photo_edit_filter_aweStruck" = "Awe Struck";
-"photo_edit_filter_bluemess" = "Bluemess";
-"photo_edit_filter_cruz" = "Cruz";
-"photo_edit_filter_haan" = "Haan";
-"photo_edit_filter_mars" = "Mars";
-"photo_edit_filter_oldMan" = "Old Man";
-"photo_edit_filter_rise" = "Rise";
-"photo_edit_filter_starlit" = "Starlit";
-"photo_edit_filter_whisper" = "Whisper";
-
+"photo_edit_filter_clarendon" = "Filter 2";
+"photo_edit_filter_metropolis" = "Filter 15";
+"photo_edit_filter_lime" = "Filter 10";
+"photo_edit_filter_adele" = "Filter 13";
+"photo_edit_filter_amazon" = "Filter 7";
+"photo_edit_filter_april" = "Filter 6";
+"photo_edit_filter_audrey" = "Filter 16";
+"photo_edit_filter_aweStruck" = "Filter 1";
+"photo_edit_filter_bluemess" = "Filter 12";
+"photo_edit_filter_cruz" = "Filter 14";
+"photo_edit_filter_haan" = "Filter 11";
+"photo_edit_filter_mars" = "Filter 4";
+"photo_edit_filter_oldMan" = "Filter 3";
+"photo_edit_filter_rise" = "Filter 5";
+"photo_edit_filter_starlit" = "Filter 8";
+"photo_edit_filter_whisper" = "Filter 9";
 "photo_edit_adjust" = "Adjust";
 "photo_edit_light" = "Light";
 "photo_edit_color" = "Color";
 "photo_edit_effect" = "Effect";
-"photo_edit_hsl" = "HSL";
-
+"photo_edit_hsl" = "Mix";
 "photo_edit_adjustment_brightness" = "Brightness";
 "photo_edit_adjustment_contrast" = "Contrast";
 "photo_edit_adjustment_exposure" = "Exposure";
@@ -1723,6 +1712,7 @@
 "photo_edit_adjustment_sharpness" = "Sharpness";
 "photo_edit_adjustment_blur" = "Blur";
 "photo_edit_adjustment_vignette" = "Vignette";
-
+"photo_edit_tabbar_filters" = "Filters";
+"photo_edit_tabbar_adjustments" = "Adjustments";
 "photo_edit_ratio_free" = "Free";
 "photo_edit_ratio_original" = "Original";
