--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1680,3 +1680,15 @@
 "photo_edit_tabbar_adjustments" = "تعديل";
 "photo_edit_ratio_free" = "حرّ";
 "photo_edit_ratio_original" = "أصلي";
+"digicel_quota_cancel_FJ" = "يمكنكم إدارة أو إلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"digicel_quota_cancel_WS" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"digicel_quota_cancel_NR" = "يمكنكم إدارة أو إلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"digicel_quota_cancel_TO" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"digicel_quota_cancel_VU" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"digicel_quota_cancel_PG" = "يمكنكم إدارة أو إلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"digicel_feature_cancel_FJ" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"digicel_feature_cancel_WS" = "يمكنكم إدارة أو إلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"digicel_feature_cancel_NR" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"digicel_feature_cancel_TO" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"digicel_feature_cancel_VU" = "يمكنكم إدارة أو إلغاءعضوية lifebox من خلال تطبيق My Digicel.";
+"digicel_feature_cancel_PG" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
