--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1668,3 +1668,15 @@
 "photo_edit_tabbar_adjustments" = "Bearbeiten";
 "photo_edit_ratio_free" = "Unabhängig";
 "photo_edit_ratio_original" = "Original";
+"digicel_quota_cancel_FJ" = "Sie können Ihr Digicel-Abonnement über die My Digicel-Anwendung oder den Kundendienst kündigen oder verwalten. “";
+"digicel_quota_cancel_WS" = "Sie können Ihr Digicel-Abonnement über die My Digicel-Anwendung oder den Kundendienst kündigen oder verwalten. “";
+"digicel_quota_cancel_NR" = "Sie können Ihr Digicel-Abonnement über die My Digicel-Anwendung oder den Kundendienst kündigen oder verwalten. “";
+"digicel_quota_cancel_TO" = "Sie können Ihr Lifebox-Abonnement über die My Digicel-App kündigen oder verwalten.";
+"digicel_quota_cancel_VU" = "Sie können Ihr Lifebox-Abonnement über die My Digicel-App kündigen oder verwalten.";
+"digicel_quota_cancel_PG" = "Sie können Ihr Digicel-Abonnement über die My Digicel-Anwendung oder den Kundendienst kündigen oder verwalten. “";
+"digicel_feature_cancel_FJ" = "Sie können Ihr Digicel-Abonnement über die My Digicel-Anwendung oder den Kundendienst kündigen oder verwalten. “";
+"digicel_feature_cancel_WS" = "Sie können Ihr Digicel-Abonnement über die My Digicel-Anwendung oder den Kundendienst kündigen oder verwalten. “";
+"digicel_feature_cancel_NR" = "Sie können Ihr Lifebox-Abonnement über die My Digicel-App kündigen oder verwalten.";
+"digicel_feature_cancel_TO" = "Sie können Ihr Digicel-Abonnement über die My Digicel-Anwendung oder den Kundendienst kündigen oder verwalten. “";
+"digicel_feature_cancel_VU" = "Sie können Ihr Lifebox-Abonnement über die My Digicel-App kündigen oder verwalten.";
+"digicel_feature_cancel_PG" = "Sie können Ihr Lifebox-Abonnement über die My Digicel-App kündigen oder verwalten.";
