--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1716,3 +1716,15 @@
 "photo_edit_tabbar_adjustments" = "Adjustments";
 "photo_edit_ratio_free" = "Free";
 "photo_edit_ratio_original" = "Original";
+"digicel_quota_cancel_FJ" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"digicel_quota_cancel_WS" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"digicel_quota_cancel_NR" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"digicel_quota_cancel_TO" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"digicel_quota_cancel_VU" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"digicel_quota_cancel_PG" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"digicel_feature_cancel_FJ" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"digicel_feature_cancel_WS" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"digicel_feature_cancel_NR" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"digicel_feature_cancel_TO" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"digicel_feature_cancel_VU" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"digicel_feature_cancel_PG" = "Cancel or manage your Lifebox subscription in the My Digicel app";
