--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1710,3 +1710,15 @@
 "photo_edit_tabbar_adjustments" = "Editar";
 "photo_edit_ratio_free" = "Independiente";
 "photo_edit_ratio_original" = "Original";
+"digicel_quota_cancel_FJ" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
+"digicel_quota_cancel_WS" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
+"digicel_quota_cancel_NR" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
+"digicel_quota_cancel_TO" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
+"digicel_quota_cancel_VU" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
+"digicel_quota_cancel_PG" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
+"digicel_feature_cancel_FJ" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
+"digicel_feature_cancel_WS" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
+"digicel_feature_cancel_NR" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
+"digicel_feature_cancel_TO" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
+"digicel_feature_cancel_VU" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
+"digicel_feature_cancel_PG" = "Puede cancelar o gestionar su membresía de Lifebox por medio de la aplicación My Digicel.";
