--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -1974,3 +1974,15 @@ Please check I have understood the intended command here*/
 "photo_edit_tabbar_adjustments" = "Retoucher";
 "photo_edit_ratio_free" = "Indépendant";
 "photo_edit_ratio_original" = "Original";
+"digicel_quota_cancel_FJ" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
+"digicel_quota_cancel_WS" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
+"digicel_quota_cancel_NR" = "Annuler ou gérer votre offre lifebox dans My Digicel app";
+"digicel_quota_cancel_TO" = "Annuler ou gérer votre offre lifebox dans My Digicel app";
+"digicel_quota_cancel_VU" = "Annuler ou gérer votre offre lifebox dans My Digicel app";
+"digicel_quota_cancel_PG" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
+"digicel_feature_cancel_FJ" = "Annuler ou gérer votre offre lifebox dans My Digicel app";
+"digicel_feature_cancel_WS" = "Annuler ou gérer votre offre lifebox dans My Digicel app";
+"digicel_feature_cancel_NR" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
+"digicel_feature_cancel_TO" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
+"digicel_feature_cancel_VU" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
+"digicel_feature_cancel_PG" = "Annuler ou gérer votre offre lifebox dans My Digicel app";
