--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1668,3 +1668,15 @@
 "photo_edit_tabbar_adjustments" = "Editează";
 "photo_edit_ratio_free" = "Liber";
 "photo_edit_ratio_original" = "Original";
+"digicel_quota_cancel_FJ" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
+"digicel_quota_cancel_WS" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
+"digicel_quota_cancel_NR" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
+"digicel_quota_cancel_TO" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
+"digicel_quota_cancel_VU" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
+"digicel_quota_cancel_PG" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
+"digicel_feature_cancel_FJ" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
+"digicel_feature_cancel_WS" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
+"digicel_feature_cancel_NR" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
+"digicel_feature_cancel_TO" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
+"digicel_feature_cancel_VU" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
+"digicel_feature_cancel_PG" = "Anulați sau gestionați abonamentul pentru Lifebox în aplicația My Digicel";
