--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1682,3 +1682,15 @@
 "photo_edit_tabbar_adjustments" = "Редактировать";
 "photo_edit_ratio_free" = "Произвольный";
 "photo_edit_ratio_original" = "Оригинал";
+"digicel_quota_cancel_FJ" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
+"digicel_quota_cancel_WS" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
+"digicel_quota_cancel_NR" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
+"digicel_quota_cancel_TO" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
+"digicel_quota_cancel_VU" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
+"digicel_quota_cancel_PG" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
+"digicel_feature_cancel_FJ" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
+"digicel_feature_cancel_WS" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
+"digicel_feature_cancel_NR" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
+"digicel_feature_cancel_TO" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
+"digicel_feature_cancel_VU" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
+"digicel_feature_cancel_PG" = "Вы можете отменить или управлять своей подпиской lifebox из приложения My Digicel.";
