--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1711,3 +1711,15 @@
 "photo_edit_tabbar_adjustments" = "Redakto";
 "photo_edit_ratio_free" = "I lire ";
 "photo_edit_ratio_original" = "Origjinale";
+"digicel_quota_cancel_FJ" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
+"digicel_quota_cancel_WS" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
+"digicel_quota_cancel_NR" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
+"digicel_quota_cancel_TO" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
+"digicel_quota_cancel_VU" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
+"digicel_quota_cancel_PG" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
+"digicel_feature_cancel_FJ" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
+"digicel_feature_cancel_WS" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
+"digicel_feature_cancel_NR" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
+"digicel_feature_cancel_TO" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
+"digicel_feature_cancel_VU" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
+"digicel_feature_cancel_PG" = "Anulloje ose menaxhoje abonimin tënd Lifebox në aplikacionin My Digicel app";
