--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1670,3 +1670,15 @@
 "photo_edit_tabbar_adjustments" = "Редагувати";
 "photo_edit_ratio_free" = "Незалежний";
 "photo_edit_ratio_original" = "Оригінал";
+"digicel_quota_cancel_FJ" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
+"digicel_quota_cancel_WS" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
+"digicel_quota_cancel_NR" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
+"digicel_quota_cancel_TO" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
+"digicel_quota_cancel_VU" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
+"digicel_quota_cancel_PG" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
+"digicel_feature_cancel_FJ" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
+"digicel_feature_cancel_WS" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
+"digicel_feature_cancel_NR" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
+"digicel_feature_cancel_TO" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
+"digicel_feature_cancel_VU" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
+"digicel_feature_cancel_PG" = "Ви можете анулюватиабо управляти вашою підпискою lifebox з додатка My Digicel.";
