Widget localization strings, some UI changes

--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1728,3 +1728,51 @@
 "digicel_feature_cancel_TO" = "Cancel or manage your Lifebox subscription in the My Digicel app";
 "digicel_feature_cancel_VU" = "Cancel or manage your Lifebox subscription in the My Digicel app";
 "digicel_feature_cancel_PG" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+
+"widget_small_sign_in_text" = "You are not signed in to lifebox";
+"widget_small_sign_in_button" = "Sign in";
+"widget_small_quota_title" = "Your quota is over %d%.";
+"widget_small_quota_subtitle" = " Time to upgrade your plan.";
+"widget_small_quota_button" = "View plans";
+"widget_small_device_storage_title" = "Device storage is %d% used.";
+"widget_small_device_storage_subtitle" = " You need more space.";
+"widget_small_device_storage_button" = "Free up space";
+"widget_small_old_contact_backup_title" = "It's over 1 month";
+"widget_small_old_contact_backup_subtitle" = " since your last contact backup.";
+"widget_small_old_contact_backup_button" = "Back up";
+"widget_small_no_contact_backup_title" = "No backed up contacts.";
+"widget_small_no_contact_backup_subtitle" = "";
+"widget_small_no_contact_backup_button" = "Back up";
+"widget_small_face_recognition_title" = "You have 7 people albums.";
+"widget_small_face_recognition_subtitle" = " Check them out";
+"widget_small_face_recognition_button" = "People albums";
+"widget_small_face_recognition_disabled_fir_backup_title" = "";
+"widget_small_face_recognition_disabled_fir_subtitle" = "Group your photos easily by people!";
+"widget_small_face_recognition_disabled_fir_button" = "Enable grouping";
+"widget_small_face_recognition_need_premium_title" = "";
+"widget_small_face_recognition_need_premium_subtitle" = "Become premium to see people albums!";
+"widget_small_face_recognition_need_premium_button" = "Become premium";
+
+"widget_medium_sign_in_text" = "You are not signed in to lifebox";
+"widget_medium_sign_in_button" = "Sign in to lifebox";
+"widget_medium_quota_title" = "Your lifebox quota is nearly full.";
+"widget_medium_quota_subtitle" = "It’s time to upgrade your plan.";
+"widget_medium_quota_button" = "View plans";
+"widget_medium_device_storage_title" = "Running out of device storage!";
+"widget_medium_device_storage_subtitle" = "You need space for new memories.";
+"widget_medium_device_storage_button" = "Free up space";
+"widget_medium_old_contact_backup_title" = "It's over 1 month";
+"widget_medium_old_contact_backup_subtitle" = " since your last contact backup.";
+"widget_medium_old_contact_backup_button" = "Back up contacts";
+"widget_medium_no_contact_backup_title" = "No backed up contacts.";
+"widget_medium_no_contact_backup_subtitle" = "Secure your contacts by backing them up.";
+"widget_medium_no_contact_backup_button" = "Back up contacts";
+"widget_medium_face_recognition_title" = "You have 7 people albums.";
+"widget_medium_face_recognition_subtitle" = "Check them out";
+"widget_medium_face_recognition_button" = "See people albums";
+"widget_medium_face_recognition_disabled_fir_backup_title" = "";
+"widget_medium_face_recognition_disabled_fir_subtitle" = "What about grouping your photos easily by people?";
+"widget_medium_face_recognition_disabled_fir_button" = "Enable face-image grouping";
+"widget_medium_face_recognition_need_premium_title" = "";
+"widget_medium_face_recognition_need_premium_subtitle" = "Become premium to see people albums!";
+"widget_medium_face_recognition_need_premium_button" = "Become premium";
