--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1728,3 +1728,11 @@
 "digicel_feature_cancel_TO" = "Cancel or manage your Lifebox subscription in the My Digicel app";
 "digicel_feature_cancel_VU" = "Cancel or manage your Lifebox subscription in the My Digicel app";
 "digicel_feature_cancel_PG" = "Cancel or manage your Lifebox subscription in the My Digicel app";
+"widget_rule_4_1_small_button" = "Auto sync";
+"widget_rule_4_1_small_detail" = "You have files files wating for sync";
+"widget_rule_4_1_medium_button" = "Auto sync";
+"widget_rule_4_1_medium_detail" = "You have files files wating for sync";
+"widget_rule_4_2_small_button" = "Enable auto sync";
+"widget_rule_4_2_small_detail" = "You have files files wating for sync";
+"widget_rule_4_2_medium_button" = "Enable auto sync";
+"widget_rule_4_2_medium_detail" = "You have files files wating for sync";
